# Python-Flask-API

whoami-base/: .gitignore  NOTES.rst  README.rst  pyproject.toml
whoami-base/tests/: test_whoami.py
whoami-base/whoami/: app.py  db.yaml
whoami-base/whoami/db/: schema.sql
whoami-base/whoami/templates/: base.html  login.html  me.html  signup.html
